# physlr

./: .clang-tidy  .gitignore  .pylintrc  Brewfile  Makefile  README.md  azure-pipelines.yml  benchmarking.R  getmin.sh  gtimeparse_list.sh  igraph_1.py  mem-tsv.sh  pipeline.gv  plotbed.rmd  requirements.txt  setup.py  time-tsv.sh
data/: .gitignore  Makefile  f1.quast.table.tsv  f1.quast.tsv  fish.quast.table.tsv  fish.quast.tsv  hg004.quast.table.tsv  hg004.quast.tsv  physlr-make  plot-degree.rmd  plot-depth.rmd  plot-edge-n.rmd  plot-mxperbx.rmd  plotbed.rmd  plothistogram.rmd  plotpaf.rmd  profile-physlr.Rmd  profile-physlr.rmd  quast.rmd  (+2 more)
ground-truth/: README  (+1 more)
src/: .gitignore  Makefile  Makefile.am  Makefile.cpp  add-bx-to-long.cpp  cc-Makefile  checkMx.sh  configure.ac  cpp-Makefile  cpp.head50.n150-900.tsv  physlr-bx-long.cc  physlr-filter-barcodes-new.cc  physlr-filter-barcodes.cc  physlr-filter-barcodes2.cc  physlr-filter-bxmx.cc  physlr-indexlr.cc  physlr-makebf.cc  physlr-makebf.cpp  physlr-map.cc  physlr-molecules.cc  physlr-overlap.cc  physlr-split-minimizers.cc  physlr-unitig-overlap.cc  py.head50.n150-900.tsv
src/data/: checkMx.sh  f1.indexlr.head1000.physlr.tsv  f1.tiny.indexlr.n2-10.c2-4.physlr.tsv.good  f1.tiny.indexlr.n2-10.physlr.tsv  mt.fa  mt.physlr.tsv.good  stLFR.10X.combined.tiny.fq  stLFR.10X.combined.tiny.physlr.tsv.good  stLFR.tiny.filtered.physlr.tsv.good  stLFR.tiny.fq  stLFR.tiny.physlr.tsv.good  tiny.mol.input.tsv  tiny.mol.tsv.good  tiny.overlap.input.tsv  tiny.physlr.overlap.n1.sorted.tsv  tiny.physlr.overlap.n1.tsv  tiny.physlr.overlap.n2.sorted.tsv  tiny.physlr.overlap.n2.tsv  tiny.split-minimizers.ext.mol.split.tsv.good  tiny.split-minimizers.ext.mol.tsv  tiny.split-minimizers.mol.mol2-bcs.split.tsv.good  tiny.split-minimizers.mol.mol2-bcs.tsv  tiny.split-minimizers.physlr.tsv
src/eval/: evalEdges.pl  reduceToWhitelist.pl
src/include/: indexlr-buffer.h  indexlr-minimize.h  indexlr-workers.h
src/overlap/: MinimizerOverlap.cpp  Options.cpp  Options.h  physlr-overlap.cc
(+29 files in other folders)
